2023-09-05T16:09:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6087138522 # 1882
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 7 25
* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1566 5062
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1567 5063
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-05]

2023-09-05T08:10:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6081923773 # 1881
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 6 24
* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5061
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1566 5062
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-05]

2023-09-05T00:35:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6078768323 # 1880
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 6 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5060
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5061
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-04]

2023-09-04T16:09:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6075681889 # 1879