@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-05T16:09:49Z",
+  "timestamp" : "2023-09-06T00:35:29Z",
   "count_outdated" : 5038,
   "uniques_outdated" : 1551,
-  "count" : 5063,
+  "count" : 5064,
   "uniques" : 1567,
   "clones" : [
     {
@@ -88,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
