@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 7,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2023-09-05T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
