@@ -1,3 +1,12 @@
+2023-09-06T00:35:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6091238636 # 1883
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-06
+* notice: last 14d: unq all: 7 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1567 5063
+* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1567 5064
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-09-05]
+
 2023-09-05T16:09:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6087138522 # 1882
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
